# wagtail-katex

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
tests/: models.py  settings.py  tests.py  urls.py
tests/migrations/: 0001_initial.py
wagtailkatex/: conf.py  richtext.py  wagtail_hooks.py
wagtailkatex/locale/zh_Hant/LC_MESSAGES/: django.po
wagtailkatex/static/wagtailkatex/: katex_preview.js  mathjax_preview.js  wagtailkatex-template.js  wagtailkatex.css  wagtailkatex.js
wagtailkatex/templatetags/: wagtailkatex.py
